[gd_scene load_steps=3 format=2]

[ext_resource path="res://DiceCharacters/EmotionState.gd" type="Script" id=1]
[ext_resource path="res://DiceCharacters/MarkovNode.tscn" type="PackedScene" id=2]

[node name="EmotionState" type="Node"]
script = ExtResource( 1 )

[node name="TalkMarkov" parent="." instance=ExtResource( 2 )]

[node name="FlirtMarkov" parent="." instance=ExtResource( 2 )]

[node name="SmileyMarkov" parent="." instance=ExtResource( 2 )]

[node name="SadFaceMarkov" parent="." instance=ExtResource( 2 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -10.0
